--- a/site/index.html
+++ b/site/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="None">
-        
-        
+        <meta name="description" content="Project documentation with Markdown.">
+        <meta name="author" content="EDev">
+        <link rel="canonical" href="http://www.mkdocs.org/">
         <link rel="shortcut icon" href="./img/favicon.ico">
-        <title>My Docs</title>
+        <title>EDev Shell Tool</title>
         <link href="./css/bootstrap-custom.min.css" rel="stylesheet">
         <link href="./css/font-awesome-4.5.0.css" rel="stylesheet">
         <link href="./css/base.css" rel="stylesheet">
@@ -31,7 +31,7 @@
 
         <!-- Collapsed navigation -->
         <div class="navbar-header">
-            <a class="navbar-brand" href=".">My Docs</a>
+            <a class="navbar-brand" href=".">EDev Shell Tool</a>
         </div>
 
         <!-- Expanded navigation -->
@@ -51,28 +51,51 @@
         <div class="container">
                 <div class="col-md-3"><div class="bs-sidebar hidden-print affix well" role="complementary">
     <ul class="nav bs-sidenav">
-        <li class="main active"><a href="#welcome-to-mkdocs">Welcome to MkDocs</a></li>
-            <li><a href="#commands">Commands</a></li>
-            <li><a href="#project-layout">Project layout</a></li>
+        <li class="main active"><a href="#edev-shell-tool">EDev Shell Tool</a></li>
+            <li><a href="#links">Links</a></li>
     </ul>
 </div></div>
                 <div class="col-md-9" role="main">
 
-<h1 id="welcome-to-mkdocs">Welcome to MkDocs</h1>
-<p>For full documentation visit <a href="http://mkdocs.org">mkdocs.org</a>.</p>
-<h2 id="commands">Commands</h2>
+<h1 id="edev-shell-tool">EDev Shell Tool</h1>
+<p>A cross platform shell script tool.</p>
+<h1 align="center">Technologies</h1>
+
+<p align="center">
+<a href="https://en.wikipedia.org/wiki/Cmd.exe"><img src="https://github.com/EnthDev/edevshelltool/raw/master/doc/shell-cmd-icon.png"></a>
+<a href="https://www.gnu.org/software/bash/"><img src="https://github.com/EnthDev/edevshelltool/raw/master/doc/shell-bash-icon.png"></a>
+<a href="https://github.com/PowerShell/PowerShell"><img src="https://github.com/EnthDev/edevshelltool/raw/master/doc/shell-ps-icon.png"></a>
+<a href="https://en.wikipedia.org/wiki/VBScript"><img src="https://github.com/EnthDev/edevshelltool/raw/master/doc/shell-vbs-icon.png"></a>
+</p>
+
+<h1 align="center">Features</h1>
+
 <ul>
-<li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
-<li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
-<li><code>mkdocs build</code> - Build the documentation site.</li>
-<li><code>mkdocs help</code> - Print this help message.</li>
+<li>CMD Shell:</li>
+<li>Self elevated prompt.</li>
 </ul>
-<h2 id="project-layout">Project layout</h2>
-<pre><code>mkdocs.yml    # The configuration file.
-docs/
-    index.md  # The documentation homepage.
-    ...       # Other markdown pages, images and other files.
-</code></pre></div>
+<h1 align="center">Compatibility</h1>
+
+<p align="center">
+<a href="https://www.microsoft.com/en-us/windows/"><img src="https://github.com/EnthDev/edevshelltool/raw/master/doc/os_win.png"></a>
+</p>
+
+<p><a href="TODO.md#compatibility">more...</a></p>
+<h1 align="center">Usage</h1>
+
+<p>Windows Systems:</p>
+<pre><code class="bat">win_bootstrap.bat
+</code></pre>
+
+<h2 id="links">Links</h2>
+<ul>
+<li><a href="https://github.com/EnthDev/edevshelltool/wiki">Documentation</a></li>
+<li><a href="TODO.md">Contribute</a></li>
+<li><a href="THANKS.md">Support</a></li>
+<li><a href="mailto:enthdev@outlook.com">Contact</a></li>
+</ul>
+<hr />
+<p>This document was written with <a href="https://guides.github.com/features/mastering-markdown/">GitHub Flavored Markdown</a> :octocat: and <a href="http://www.webpagefx.com/tools/emoji-cheat-sheet/">Emoji</a> :smile:</p></div>
         </div>
 
         <footer class="col-md-12">
@@ -111,5 +134,5 @@ docs/
 
 <!--
 MkDocs version : 0.16.1
-Build Date UTC : 2017-03-13 21:25:00
+Build Date UTC : 2017-03-13 21:37:08
 -->
